CMAKE_MINIMUM_REQUIRED(VERSION 2.8.10)
PROJECT(d6)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wextra")

SET(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} -fdata-sections -ffunction-sections")
SET(CMAKE_EXE_LINKER_FLAGS_MINSIZEREL "${CMAKE_EXE_LINKER_FLAGS_MINSIZEREL} -Wl,--gc-sections")

AUX_SOURCE_DIRECTORY(. d6_SOURCES)
ADD_EXECUTABLE(${PROJECT_NAME} ${d6_SOURCES})
INSTALL(TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION bin
  )

SET(CPACK_SOURCE_IGNORE_FILES
  ${CPACK_SOURCE_IGNORE_FILES}
  "~$"
  "/build.*/"
  )
INCLUDE(CPack)
